--- a/libfprint-0.7.0/examples/example.html
+++ b/libfprint-0.7.0/examples/example.html
@@ -10,6 +10,7 @@
 
     socket.onopen = function(){
         console.log("socket open"); update("open");
+        socket.send('Ping');
     }
     socket.onclose = function(){
         console.log("socket close"); update("closed");
