Mudanças no front.

--- a/ponto-alpha/app/clock-in.html
+++ b/ponto-alpha/app/clock-in.html
@@ -75,6 +75,29 @@
     <script src="js/freelancer.min.js"></script>
     <script src="js/endpoint.js"></script>
 
+
+    <!-- Fingerprint Register Modal -->
+    <div id="error-modal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title ">Erro</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div id="error-modal-description" style="display: block;">
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default mr-1" data-dismiss="modal">Fechar</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
   </body>
 
 </html>
