Ajustes no frontend e no ws.c.

--- a/ponto-alpha/app/clock-in.html
+++ b/ponto-alpha/app/clock-in.html
@@ -47,10 +47,11 @@
     <!-- Header -->
     <header class="masthead bg-primary text-center">
       <div class="container">
-        <img class="img-fluid " src="img/digi (1).jpg" alt="">
-        
-        <a href="index.html" class="btn btn-default border col-md-5 btn-register-fingerprint">Voltar</a>
-        <a id="read-digital" class="btn btn-default border col-md-5 btn-register-fingerprint">Ler Digital</a>
+        <img class="img-fluid " style="height: 312px;" src="img/digi (1).jpg" alt="">
+        <div>
+          <a href="index.html" class="btn btn-default border col-md-5 btn-register-fingerprint">Voltar</a>
+          <a id="read-digital" class="btn btn-default border col-md-5 btn-register-fingerprint">Ler Digital</a>
+        </div>
       </div>
     </header>
 
