--- a/ponto-alpha/app/index.html
+++ b/ponto-alpha/app/index.html
@@ -85,6 +85,7 @@
   <script src="js/freelancer.min.js"></script>
   <script src="js/flipclock.js"></script>
   <script src="js/endpoint.js"></script>
+  <script src="js/notify.js"></script>
 
 
 </body>
