--- a/ponto-alpha/app/index.html
+++ b/ponto-alpha/app/index.html
@@ -54,8 +54,7 @@
         .bottom-left-align-text {
             position: absolute;
             bottom: 0;
-            left: 10px;
-            padding: 20px;
+            left: 2px;
         }
 
         .bottom-right-align-text {
@@ -112,7 +111,27 @@
             padding:2px;
         }
 
+        /* width */
+        ::-webkit-scrollbar {
+            width: 25px;
+        }
 
+        /* Track */
+        ::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px grey;
+            border-radius: 20px;
+        }
+
+        /* Handle */
+        ::-webkit-scrollbar-thumb {
+            background: #212529;
+            border-radius: 10px;
+        }
+
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: #212529;
+        }
     </style>
 </head>
 <body>
