Ajustes no frontend. Melhorias nos retornos.

--- a/ponto-alpha/app/index.html
+++ b/ponto-alpha/app/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="fullPage full-screen backgrounds."/>
     <meta name="keywords" content="fullpage,jquery,demo,screen,fullscreen,backgrounds,full-screen"/>
     <meta name="Resource-type" content="Document"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -198,6 +199,18 @@
             </div>
         </div>
     </div>
+    <div class="section" id="section4">
+        <div class="user-entry container text-center">
+
+        </div>
+        <div class="row">
+            <div class="bottom-left-align-text text-center">
+                <a href="#boasVindas"><i class="fa fa-backward"
+                                         style="font-size: 64px;"></i>
+                    <h3 style="padding: 10px">Voltar</h3></a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!--overlay-->
@@ -250,6 +263,7 @@
 <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
 <script type="text/javascript" src="js/resources.js"></script>
+<script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/fullpage.js"></script>
 <script type="text/javascript" src="js/fullpage-controls.js"></script>
 <script type="text/javascript" src="js/flipclock.js"></script>
