alterações em mensagens de feedback

--- a/ponto-alpha/app/index.html
+++ b/ponto-alpha/app/index.html
@@ -171,7 +171,7 @@
     </div>
     <div class="section" id="section2">
         <div class="container text-center">
-            <h1>Cadastro de usuário</h1>
+            <h1>Cadastro de Digital</h1>
             <div class="row" id="user-list">
 
             </div>
@@ -186,7 +186,7 @@
     </div>
     <div class="section" id="section3">
         <div class="container text-center">
-            <h1>Batida de ponto</h1>
+            <h1>Registrar Ponto</h1>
             <img src="img/fingerprint.gif" class="img-fluid" style="height: 300px">
             <div class="device-status p-sm-2">
             </div>
@@ -222,7 +222,7 @@
 
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h2 class="modal-title rh-check-title">Permissão do RH/Gerente</h2>
+                    <h2 class="modal-title rh-check-title">Solicitação de Permissão</h2>
                     <button type="button"  onclick="off()" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
@@ -230,11 +230,9 @@
                 <div class="modal-body">
                     <div id="modal-rh-check-text">
                         <h3>
-                            É necessária a presença de um Gerente ou Representante do RH para o cadastro de um usuário.
-                        </h3>
+                            Você precisa ser um Gerente ou um representante do RH para cadastrar um usuário.                        </h3>
                         <h3>
-                            <b>Caso exista um gerente ou representante do RH presente, pressione o botão abaixo para iniciar a verificação.</b>
-                        </h3>
+                            <b>Caso você seja, pressione o botão abaixo para iniciar a verificação :)</b>                        </h3>
                     </div>
                     <div class="device-status" id="rh-check-device">
 
