--- a/ponto-alpha/app/index.html
+++ b/ponto-alpha/app/index.html
@@ -152,12 +152,12 @@
             <div class="col-sm-6 text-center">
                 <a href="#cadastraUsuario"><i class="far fa-address-book active"
                                               style="font-size: 256px;"></i>
-                    <h3 style="padding: 10px">Cadastrar usuário</h3></a>
+                    <h3 style="padding: 10px">Cadastrar digital</h3></a>
             </div>
             <div class="col-sm-6 text-center">
                 <a href="#batePonto"> <i class="fas fa-fingerprint"
                                          style="font-size: 256px;"></i>
-                    <h3 style="padding: 10px">Bater Ponto</h3>
+                    <h3 style="padding: 10px">Registrar Ponto</h3>
                 </a>
             </div>
         </div>
@@ -172,6 +172,9 @@
     <div class="section" id="section2">
         <div class="container text-center">
             <h1>Cadastro de Digital</h1>
+            <div id="subtitle-msg">
+
+            </div>
             <div class="row" id="user-list">
 
             </div>
@@ -222,7 +225,7 @@
 
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h2 class="modal-title rh-check-title">Solicitação de Permissão</h2>
+                    <h2 class="modal-title rh-check-title">Cadastro de Usuário - Solicitação de Permissão</h2>
                     <button type="button"  onclick="off()" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
@@ -230,9 +233,11 @@
                 <div class="modal-body">
                     <div id="modal-rh-check-text">
                         <h3>
-                            Você precisa ser um Gerente ou um representante do RH para cadastrar um usuário.                        </h3>
+                            Você precisa ser um Gerente ou um representante do RH para cadastrar um usuário
+                        </h3>
                         <h3>
-                            <b>Caso você seja, pressione o botão abaixo para iniciar a verificação :)</b>                        </h3>
+                            <b>Caso você seja, pressione o botão abaixo para iniciar a verificação</b>
+                        </h3>
                     </div>
                     <div class="device-status" id="rh-check-device">
 
