--- a/ponto-alpha/app/index.html
+++ b/ponto-alpha/app/index.html
@@ -195,8 +195,8 @@
     <div class="section" id="section3">
         <div class="container text-center">
             <h1>Por favor, pressione o botão abaixo para realizar o registro do ponto</h1>
-            <button class="btn-sq-xs" type="button" onclick="verifyFingerprint()">Registrar Ponto</button>
-            <!--<img src="img/fingerprint.gif" class="img-fluid" style="height: 300px">-->
+            <button id = "btn-registrar-ponto"class="btn-sq-xs" type="button" onclick="verifyFingerprint()">Registrar Ponto</button>
+            <div><img id = "img-fingerprint-registrar" src="img/fingerprint.gif" class="img-fluid" style="height: 150px; display: none; margin-top: 4px;"></div>
             <div class="device-status p-sm-2">
             </div>
         </div>
