adição de flag para remoção de ponto | adição de método remove_point

--- a/ponto-alpha/app/index.html
+++ b/ponto-alpha/app/index.html
@@ -299,11 +299,11 @@
                     </div>
 
                     <div class="text-center">
-                        <a class="btn btn-primary" onclick="offConfirmRecordUser(); verifyFingerprint();">
+                        <a class="btn btn-primary" onclick="offConfirmRecordUser();">
                             <i style="font-size: 20px;"></i>
                             Sim
                         </a>
-                        <a class="btn btn-primary" onclick="offConfirmRecordUser(); resetScreensAndGoHome();">
+                        <a class="btn btn-primary" onclick="offConfirmRecordUser();removePostPoint(userId); resetScreensAndGoHome();">
                             <i style="font-size: 20px;"></i>
                             Não
                         </a>
