recuperação de id a partir de viwe

--- a/ponto-alpha/app/index.html
+++ b/ponto-alpha/app/index.html
@@ -303,7 +303,7 @@
                             <i style="font-size: 20px;"></i>
                             Sim
                         </a>
-                        <a class="btn btn-primary" onclick="offConfirmRecordUser();removePostPoint(userId); resetScreensAndGoHome();">
+                        <a class="btn btn-primary" onclick="offConfirmRecordUser();removePostPoint(); resetScreensAndGoHome();">
                             <i style="font-size: 20px;"></i>
                             Não
                         </a>
